--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +41,6 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://yourusername.github.io/Predictive-Maintenance-System",
   "proxy": "http://localhost:5000"
 }
