Add GitHub Actions workflow for automatic deployment
- Automatically build and deploy frontend to GitHub Pages on push
- No more manual deployment steps needed

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,5 +42,8 @@
     ]
   },
   "homepage": "https://yourusername.github.io/Predictive-Maintenance-System",
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
